Make first effort to achieve map reduce for query 1