@@ -8,4 +8,6 @@ if [ ! -d "$TARGET_DIR" ]; then
     tar -xzf "../../server/target/tpe2-g7-server-2024.1Q-bin.tar.gz" -C "../../server/target/"
 fi
 
-java -cp "$SERVER_JARS" "$TARGET_SERVER" "$@"
+JAVA_OPTS="--add-opens java.management/sun.management=ALL-UNNAMED --add-opens jdk.management/com.sun.management.internal=ALL-UNNAMED "
+
+java -cp "$SERVER_JARS" -Xmx2048m  "$TARGET_SERVER"  "$@"
